Seccion de idiomas terminado en version mobile

--- a/index.html
+++ b/index.html
@@ -36,67 +36,67 @@
                     <option class="search__idioma" value="한국어" label="KO">한국어</option>
             </select>
             <button class="search__button">
-                <img src="./svg/search-white.svg" alt="search">
+                <img src="./svg/search-white.svg" alt="Search">
             </button>
         </section>
-        <!-- <section class="idiomas">
+        <section class="idiomas">
             <button class="idiomas__button">
-                <span class="idioma__nombre">Español</span>
-                <p class="idioma__info">1 755 00+ articulos</p>
+                <span class="idiomas__nombre">Español</span>
+                <p class="idiomas__info">1 755 00+ articulos</p>
             </button>
             <button class="idiomas__button">
-                <span class="idioma__nombre">English</span>
-                <p class="idioma__info">6 458 00+ articles</p>
+                <span class="idiomas__nombre">English</span>
+                <p class="idiomas__info">6 458 00+ articles</p>
             </button>
             <button class="idiomas__button">
-                <span class="idioma__nombre">日本語</span>
-                <p class="idioma__info">1 314 00+ 記事</p>
+                <span class="idiomas__nombre">日本語</span>
+                <p class="idiomas__info">1 314 00+ 記事</p>
             </button>
             <button class="idiomas__button">
-                <span class="idioma__nombre">Русский</span>
-                <p class="idioma__info">1 742 00+ статей</p>
+                <span class="idiomas__nombre">Русский</span>
+                <p class="idiomas__info">1 742 00+ статей</p>
             </button>
             <button class="idiomas__button">
-                <span class="idioma__nombre">Deutsch</span>
-                <p class="idioma__info">2 667 000+ Artikel</p>
+                <span class="idiomas__nombre">Deutsch</span>
+                <p class="idiomas__info">2 667 000+ Artikel</p>
             </button>
             <button class="idiomas__button">
-                <span class="idioma__nombre">Français</span>
-                <p class="idioma__info">2 400 000+ articles</p>
+                <span class="idiomas__nombre">Français</span>
+                <p class="idiomas__info">2 400 000+ articles</p>
             </button>
             <button class="idiomas__button">
-                <span class="idioma__nombre">Italiano</span>
-                <p class="idioma__info">1 742 000+ voci</p>
+                <span class="idiomas__nombre">Italiano</span>
+                <p class="idiomas__info">1 742 000+ voci</p>
             </button>
             <button class="idiomas__button">
-                <span class="idioma__nombre">中文</span>
-                <p class="idioma__info">1 256 000+ 条目 / 條目</p>
+                <span class="idiomas__nombre">中文</span>
+                <p class="idiomas__info">1 256 000+ 条目 / 條目</p>
             </button>
             <button class="idiomas__button">
-                <span class="idioma__nombre">Português</span>
-                <p class="idioma__info">1 085 000+ artigos</p>
+                <span class="idiomas__nombre">Português</span>
+                <p class="idiomas__info">1 085 000+ artigos</p>
             </button>
-            <button class="idiomas__button">
-                <span class="idioma__nombre">العربية</span>
-                <p class="idioma__info">1 159 000+ مقالة</p>
+            <button class="idiomas__button idiomas__button-last">
+                <span class="idiomas__nombre">العربية</span>
+                <p class="idiomas__info">1 159 000+ مقالة</p>
             </button>
         </section>
-        <section class="traductor">
+        <!-- <section class="traductor">
             <div class="traductor__caja">
                 <img src="./svg/translate.svg" alt="traductor">
                 <span class="traductor__text">Leer Wikipedia en tu idioma</span>
                 <img src="./svg/arror-down.svg" alt="Flecha abajo">
             </div>
         </section>
-        <hr>
-        <section class="fundacion">
+        <hr> -->
+        <!-- <section class="fundacion">
             <figure class="fundacion__logo">
                 <img src="./svg/wikimedia-logo.svg" alt="">
             </figure>
             <span>Wikipedia es alojada por la Fundación Wikimedia, una organización sin fines de lucro que también alberga una gama de otros proyectos.</span>
             <a href="#">Puedes apoyar nuestro trabajo con una donación.</a>
-        </section>
-        <section class="wikis">
+        </section> -->
+        <!-- <section class="wikis">
             <button class="wiki">
                 <figure class="wiki__logo">
                     <img src="./svg/commons.svg" alt="Commons">
@@ -181,8 +181,8 @@
                 <span class="wiki__name">Meta-Wiki</span>
                 <p class="wiki__info">Coordinación y documentación</p>
             </button>
-        </section>
-        <section class="app">
+        </section> -->
+        <!-- <section class="app">
             <figure class="app__icon">
                 <img class="app__icon-svg" src="./svg/wiki-icon.svg" alt="Wikipedia icono">
             </figure>
@@ -196,9 +196,9 @@
                     <img class="app__img" src="./svg/play-store.svg" alt="Plat Store">
                 </li>
             </ul>
-        </section>
+        </section> -->
     </main>
-    <hr>
+    <!-- <hr>
     <footer class="footer">
         <p class="footer__text">Esta página esta bajo la <a class="footer__link" href="https://creativecommons.org/licenses/by-sa/3.0/">licencia Creative Commons Atribución-CompartirIgual</a></p>
         <a class="footer__link" href="https://meta.wikimedia.org/wiki/Terms_of_use/es">Términos de uso</a>
