Termine la seccion traductor de la version mobile

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="icon" href="./svg/wiki-icon.svg">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tiro+Devanagari+Sanskrit&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <header class="header">
@@ -81,14 +85,12 @@
                 <p class="idiomas__info">1 159 000+ مقالة</p>
             </button>
         </section>
-        <!-- <section class="traductor">
-            <div class="traductor__caja">
-                <img src="./svg/translate.svg" alt="traductor">
-                <span class="traductor__text">Leer Wikipedia en tu idioma</span>
-                <img src="./svg/arror-down.svg" alt="Flecha abajo">
-            </div>
+        <section class="traductor">
+            <img class="traductor__svg" src="./svg/translate.svg" alt="traductor">
+            <span class="traductor__text">Leer Wikipedia en tu idioma</span>
+            <img class="traductor__arrow" src="./svg/arror-down.svg" alt="Flecha abajo">
         </section>
-        <hr> -->
+        <hr class="hr">
         <!-- <section class="fundacion">
             <figure class="fundacion__logo">
                 <img src="./svg/wikimedia-logo.svg" alt="">
