Termine la seccion de fundacion y wikis en mobile

--- a/index.html
+++ b/index.html
@@ -91,99 +91,123 @@
             <img class="traductor__arrow" src="./svg/arror-down.svg" alt="Flecha abajo">
         </section>
         <hr class="hr">
-        <!-- <section class="fundacion">
+        <section class="fundacion">
             <figure class="fundacion__logo">
-                <img src="./svg/wikimedia-logo.svg" alt="">
+                <img class="fundacion__svg" src="./svg/wikimedia-logo.svg" alt="Fundación Wikimedia">
             </figure>
-            <span>Wikipedia es alojada por la Fundación Wikimedia, una organización sin fines de lucro que también alberga una gama de otros proyectos.</span>
-            <a href="#">Puedes apoyar nuestro trabajo con una donación.</a>
-        </section> -->
-        <!-- <section class="wikis">
+            <span class="fundacion__descripcion" >Wikipedia es alojada por la Fundación Wikimedia, una organización sin fines de lucro que también alberga una gama de otros proyectos.</span>
+            <a class="fundacion__link" href="#">Puedes apoyar nuestro trabajo con una donación.</a>
+        </section>
+        <section class="wikis">
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/commons.svg" alt="Commons">
+                    <img class="wiki__svg" src="./svg/commons.svg" alt="Commons">
                 </figure>
-                <span class="wiki__name">Commons</span>
-                <p class="wiki__info">Fotos libremente utilizables y más</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Commons</span>
+                    <p class="wiki__info">Fotos libremente utilizables y más</p>
+                </div>
             </button>
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/wikiviajes.svg" alt="Wikiviajes">
+                    <img class="wiki__svg" src="./svg/wikiviajes.svg" alt="Wikiviajes">
                 </figure>
-                <span class="wiki__name">Wikiviajes</span>
-                <p class="wiki__info">La guía de viajes libre</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Wikiviajes</span>
+                    <p class="wiki__info">La guía de viajes libre</p>
+                </div>
             </button>
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/wikcionario.svg" alt="Wikcionario">
+                    <img class="wiki__svg" src="./svg/wikcionario.svg" alt="Wikcionario">
                 </figure>
-                <span class="wiki__name">Wikcionario</span>
-                <p class="wiki__info">El diccionario libre</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Wikcionario</span>
+                    <p class="wiki__info">El diccionario libre</p>
+                </div>
             </button>
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/wikilibros.svg" alt="Wikilibros">
+                    <img class="wiki__svg" src="./svg/wikilibros.svg" alt="Wikilibros">
                 </figure>
-                <span class="wiki__name">Wikilibros</span>
-                <p class="wiki__info">Libros de contenido libre</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Wikilibros</span>
+                    <p class="wiki__info">Libros de contenido libre</p>
+                </div>
             </button>
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/wikinews.svg" alt="Wikinoticias">
+                    <img class="wiki__svg" src="./svg/wikinews.svg" alt="Wikinoticias">
                 </figure>
-                <span class="wiki__name">Wikinoticias</span>
-                <p class="wiki__info">La fuente de noticias libres</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Wikinoticias</span>
+                    <p class="wiki__info">La fuente de noticias libres</p>
+                </div>
             </button>
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/wikidata.svg" alt="Wikidata">
+                    <img class="wiki__svg" src="./svg/wikidata.svg" alt="Wikidata">
                 </figure>
-                <span class="wiki__name">Wikidata</span>
-                <p class="wiki__info">Base de conocimiento libre</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Wikidata</span>
+                    <p class="wiki__info">Base de conocimiento libre</p>
+                </div>
             </button>
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/wikiversidad.svg" alt="Wikiversidad">
+                    <img class="wiki__svg" src="./svg/wikiversidad.svg" alt="Wikiversidad">
                 </figure>
-                <span class="wiki__name">Wikiversidad</span>
-                <p class="wiki__info">Plataforma educativa libre</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Wikiversidad</span>
+                    <p class="wiki__info">Plataforma educativa libre</p>
+                </div>
             </button>
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/wikiquote.svg" alt="Wikiquote">
+                    <img class="wiki__svg" src="./svg/wikiquote.svg" alt="Wikiquote">
                 </figure>
-                <span class="wiki__name">Wikiquote</span>
-                <p class="wiki__info">La colección de citas</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Wikiquote</span>
+                    <p class="wiki__info">La colección de citas</p>
+                </div>
             </button>
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/mediawiki.svg" alt="Mediawiki">
+                    <img class="wiki__svg" src="./svg/mediawiki.svg" alt="Mediawiki">
                 </figure>
-                <span class="wiki__name">Mediawiki</span>
-                <p class="wiki__info">Aplicación wiki libre y abierta</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Mediawiki</span>
+                    <p class="wiki__info">Aplicación wiki libre y abierta</p>
+                </div>
             </button>
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/wikisource.svg" alt="Wikisource">
+                    <img class="wiki__svg" src="./svg/wikisource.svg" alt="Wikisource">
                 </figure>
-                <span class="wiki__name">Wikisource</span>
-                <p class="wiki__info">La biblioteca libre</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Wikisource</span>
+                    <p class="wiki__info">La biblioteca libre</p>
+                </div>
             </button>
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/wikispecies.svg" alt="Wikispecies">
+                    <img class="wiki__svg" src="./svg/wikispecies.svg" alt="Wikispecies">
                 </figure>
-                <span class="wiki__name">Wikispecies</span>
-                <p class="wiki__info">Directorio de especies libre</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Wikispecies</span>
+                    <p class="wiki__info">Directorio de especies libre</p>
+                </div>
             </button>
             <button class="wiki">
                 <figure class="wiki__logo">
-                    <img src="./svg/meta-wiki.svg" alt="Meta-Wiki">
+                    <img class="wiki__svg" src="./svg/meta-wiki.svg" alt="Meta-Wiki">
                 </figure>
-                <span class="wiki__name">Meta-Wiki</span>
-                <p class="wiki__info">Coordinación y documentación</p>
+                <div class="wiki__text">
+                    <span class="wiki__name">Meta-Wiki</span>
+                    <p class="wiki__info">Coordinación y documentación</p>
+                </div>
             </button>
-        </section> -->
+        </section>
         <!-- <section class="app">
             <figure class="app__icon">
                 <img class="app__icon-svg" src="./svg/wiki-icon.svg" alt="Wikipedia icono">
