--- a/index.html
+++ b/index.html
@@ -208,21 +208,27 @@
                 </div>
             </button>
         </section>
-        <!-- <section class="app">
-            <figure class="app__icon">
-                <img class="app__icon-svg" src="./svg/wiki-icon.svg" alt="Wikipedia icono">
-            </figure>
-            <span class="app__title">Descargar Wikipedia para Android o iOS</span>
+        <section class="app">
+            <div class="app__download">
+                <figure class="app__logo">
+                    <img class="app__logo-svg" src="./svg/wiki-icon.svg" alt="Wikipedia icono">
+                </figure>
+                <span class="app__title">Descargar Wikipedia para Android o iOS</span>
+            </div>
             <p class="app__info">Guarda tus artículos favoritos para leerlos sin conexión, sincroniza tus listas de lectura en varios dispositivos y personaliza tu experiencia de lectura con la aplicación oficial de Wikipedia.</p>
-            <ul class="app__stores">
-                <li class="app__list">
-                    <img class="app__img" src="./svg/app-store.svg" alt="App Store">
-                </li>
-                <li class="app__list">
-                    <img class="app__img" src="./svg/play-store.svg" alt="Plat Store">
-                </li>
-            </ul>
-        </section> -->
+            <div class="app__stores">
+                <a href="https://play.google.com/store/apps/details?id=org.wikipedia&referrer=utm_source%3Dportal%26utm_medium%3Dbutton%26anid%3Dadmob">
+                    <figure class="app__icon">
+                        <img class="app__svg" src="./svg/play-store.svg" alt="Play Store">
+                    </figure>
+                </a>
+                <a href="https://itunes.apple.com/app/apple-store/id324715238?pt=208305&ct=portal&mt=8">
+                    <figure class="app__icon">
+                        <img class="app__svg" src="./svg/app-store.svg" alt="App Store">
+                    </figure>
+                </a>
+            </div>
+        </section>
     </main>
     <!-- <hr>
     <footer class="footer">
