Termine la seccion de footer en mobile y el diseño de mobile por completo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Tiro+Devanagari+Sanskrit&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    
+
 </head>
 <body>
     <header class="header">
@@ -230,11 +230,12 @@
             </div>
         </section>
     </main>
-    <!-- <hr>
+    <hr class="hr">
     <footer class="footer">
-        <p class="footer__text">Esta página esta bajo la <a class="footer__link" href="https://creativecommons.org/licenses/by-sa/3.0/">licencia Creative Commons Atribución-CompartirIgual</a></p>
-        <a class="footer__link" href="https://meta.wikimedia.org/wiki/Terms_of_use/es">Términos de uso</a>
-        <a class="footer__link" href="https://meta.wikimedia.org/wiki/Privacy_policy/es">Normativa de privacidad</a>
-    </footer> -->
+        <p class="footer__text">Esta página esta bajo la <a class="footer__link" href="https://creativecommons.org/licenses/by-sa/3.0/">licencia Creative Commons Atribución-CompartirIgual</a>
+            <a class="footer__link" href="https://meta.wikimedia.org/wiki/Terms_of_use/es">Términos de uso</a>
+            <a class="footer__link2" href="https://meta.wikimedia.org/wiki/Privacy_policy/es">Normativa de privacidad</a>
+        </p>
+    </footer>
 </body>
 </html>
